more changes to csv(s)

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "afb48b3d",
+   "id": "b69c6c3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "71a682cf",
+   "id": "0f8d478b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "aee86b6e",
+   "id": "4453b677",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "49aaf345",
+   "id": "e09a6d5a",
    "metadata": {},
    "outputs": [
     {
@@ -264,11 +264,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cd4d8b2f",
+   "execution_count": 5,
+   "id": "ce5fdd78",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Deleting Columns\n",
+    "del bike_2018_df['usertype']\n",
+    "del bike_2019_df['usertype']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a52624e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tripduration</th>\n",
+       "      <th>starttime</th>\n",
+       "      <th>stoptime</th>\n",
+       "      <th>start station id</th>\n",
+       "      <th>start station name</th>\n",
+       "      <th>start station latitude</th>\n",
+       "      <th>start station longitude</th>\n",
+       "      <th>end station id</th>\n",
+       "      <th>end station name</th>\n",
+       "      <th>end station latitude</th>\n",
+       "      <th>end station longitude</th>\n",
+       "      <th>bikeid</th>\n",
+       "      <th>birth year</th>\n",
+       "      <th>gender</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>145</td>\n",
+       "      <td>2019-09-01 00:00:37.6920</td>\n",
+       "      <td>2019-09-01 00:03:03.0100</td>\n",
+       "      <td>3640</td>\n",
+       "      <td>Journal Square</td>\n",
+       "      <td>40.733670</td>\n",
+       "      <td>-74.062500</td>\n",
+       "      <td>3206</td>\n",
+       "      <td>Hilltop</td>\n",
+       "      <td>40.731169</td>\n",
+       "      <td>-74.057574</td>\n",
+       "      <td>29303</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>212</td>\n",
+       "      <td>2019-09-01 00:03:00.6000</td>\n",
+       "      <td>2019-09-01 00:06:33.3420</td>\n",
+       "      <td>3194</td>\n",
+       "      <td>McGinley Square</td>\n",
+       "      <td>40.725340</td>\n",
+       "      <td>-74.067622</td>\n",
+       "      <td>3679</td>\n",
+       "      <td>Bergen Ave</td>\n",
+       "      <td>40.722104</td>\n",
+       "      <td>-74.071455</td>\n",
+       "      <td>29297</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>569</td>\n",
+       "      <td>2019-09-01 00:07:13.0020</td>\n",
+       "      <td>2019-09-01 00:16:42.8610</td>\n",
+       "      <td>3214</td>\n",
+       "      <td>Essex Light Rail</td>\n",
+       "      <td>40.712774</td>\n",
+       "      <td>-74.036486</td>\n",
+       "      <td>3184</td>\n",
+       "      <td>Paulus Hook</td>\n",
+       "      <td>40.714145</td>\n",
+       "      <td>-74.033552</td>\n",
+       "      <td>29435</td>\n",
+       "      <td>1977</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1380</td>\n",
+       "      <td>2019-09-01 00:07:25.3350</td>\n",
+       "      <td>2019-09-01 00:30:26.1640</td>\n",
+       "      <td>3214</td>\n",
+       "      <td>Essex Light Rail</td>\n",
+       "      <td>40.712774</td>\n",
+       "      <td>-74.036486</td>\n",
+       "      <td>3792</td>\n",
+       "      <td>Columbus Dr at Exchange Pl</td>\n",
+       "      <td>40.716870</td>\n",
+       "      <td>-74.032810</td>\n",
+       "      <td>29509</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1346</td>\n",
+       "      <td>2019-09-01 00:07:56.4670</td>\n",
+       "      <td>2019-09-01 00:30:22.5440</td>\n",
+       "      <td>3214</td>\n",
+       "      <td>Essex Light Rail</td>\n",
+       "      <td>40.712774</td>\n",
+       "      <td>-74.036486</td>\n",
+       "      <td>3792</td>\n",
+       "      <td>Columbus Dr at Exchange Pl</td>\n",
+       "      <td>40.716870</td>\n",
+       "      <td>-74.032810</td>\n",
+       "      <td>29226</td>\n",
+       "      <td>1968</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   tripduration                 starttime                  stoptime  \\\n",
+       "0           145  2019-09-01 00:00:37.6920  2019-09-01 00:03:03.0100   \n",
+       "1           212  2019-09-01 00:03:00.6000  2019-09-01 00:06:33.3420   \n",
+       "2           569  2019-09-01 00:07:13.0020  2019-09-01 00:16:42.8610   \n",
+       "3          1380  2019-09-01 00:07:25.3350  2019-09-01 00:30:26.1640   \n",
+       "4          1346  2019-09-01 00:07:56.4670  2019-09-01 00:30:22.5440   \n",
+       "\n",
+       "   start station id start station name  start station latitude  \\\n",
+       "0              3640     Journal Square               40.733670   \n",
+       "1              3194    McGinley Square               40.725340   \n",
+       "2              3214   Essex Light Rail               40.712774   \n",
+       "3              3214   Essex Light Rail               40.712774   \n",
+       "4              3214   Essex Light Rail               40.712774   \n",
+       "\n",
+       "   start station longitude  end station id            end station name  \\\n",
+       "0               -74.062500            3206                     Hilltop   \n",
+       "1               -74.067622            3679                  Bergen Ave   \n",
+       "2               -74.036486            3184                 Paulus Hook   \n",
+       "3               -74.036486            3792  Columbus Dr at Exchange Pl   \n",
+       "4               -74.036486            3792  Columbus Dr at Exchange Pl   \n",
+       "\n",
+       "   end station latitude  end station longitude  bikeid  birth year  gender  \n",
+       "0             40.731169             -74.057574   29303        1991       1  \n",
+       "1             40.722104             -74.071455   29297        1993       2  \n",
+       "2             40.714145             -74.033552   29435        1977       1  \n",
+       "3             40.716870             -74.032810   29509        1965       1  \n",
+       "4             40.716870             -74.032810   29226        1968       2  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bike_2018_df.head(5)\n",
+    "bike_2019_df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c03d4752",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tripduration                 int64\n",
+       "starttime                   object\n",
+       "stoptime                    object\n",
+       "start station id             int64\n",
+       "start station name          object\n",
+       "start station latitude     float64\n",
+       "start station longitude    float64\n",
+       "end station id               int64\n",
+       "end station name            object\n",
+       "end station latitude       float64\n",
+       "end station longitude      float64\n",
+       "bikeid                       int64\n",
+       "birth year                   int64\n",
+       "gender                       int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Checking Type of Values\n",
+    "bike_2018_df.dtypes\n",
+    "bike_2019_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32573a42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Changing the type of Values for the Gender Column\n",
+    "bike_2018_df['']"
+   ]
   }
  ],
  "metadata": {
